class Author {
  String name;

  Author(this.name);
}